syntax = "proto3";

package com.carbonplayer;

option java_package = "com.carbonplayer.model.entity.proto.identifiers";
option java_outer_classname = "PlayableItemIdV1Proto";
option optimize_for = LITE_RUNTIME;

import "identifiers/AudioId.proto";
import "identifiers/AudioListId.proto";
import "identifiers/RadioSeedId.proto";
import "identifiers/ArtistId.proto";

message PlayableItemId {

    oneof type {
        AudioId audio = 1;
        AudioListId audioList = 2;
        RadioSeedId radioSeed = 3;
        ArtistId artist = 4;
    }

}